--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
 spring.application.name=servicio-api-gateway
-server.port=8090
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.cloud.gateway.routes[0].id=servicio-films-actors
-spring.cloud.gateway.routes[0].uri=http://localhost:8001
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/films-actors/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=2
-spring.cloud.gateway.routes[1].id=servicio-critics-users-films
-spring.cloud.gateway.routes[1].uri= http://localhost:8002
-spring.cloud.gateway.routes[1].predicates[0]= Path=/api/users-critics/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=2
+# Localización Spring Cloud Config
+spring.config.import=optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
